Add jspecify annotations to shared